hphp/test/zend/bad/ext/reflection/tests/ReflectionClass_getMethods_002.php
<?php
$rc = new ReflectionClass("ReflectionClass");
echo "\nTest invalid arguments:";
$rc->getMethods('X');
$rc->getMethods('X', true);

?>
